footer and navbar

--- a/src/PartyRentingPlatform/ClientApp/src/app/shared/layout/header/header.scss
+++ b/src/PartyRentingPlatform/ClientApp/src/app/shared/layout/header/header.scss
@@ -38,7 +38,7 @@ Development Ribbon
 Navbar styles
 ========================================================================== */
 .jh-navbar {
-  background-color: #353d47;
+  background-color: #21364f;
   padding: 0.2em 1em;
   .profile-image {
     margin: -10px 0px;
