Add Home, Room Detail

--- a/src/PartyRentingPlatform/ClientApp/src/app/modules/home/home.scss
+++ b/src/PartyRentingPlatform/ClientApp/src/app/modules/home/home.scss
@@ -1,10 +1,14 @@
 /* ==========================================================================
 Main page styles
 ========================================================================== */
-.hipster {
-  display: inline-block;
-  width: 100%;
-  height: 497px;
-  background: url('/content/images/jhipster_family_member_2.svg') no-repeat center top;
-  background-size: contain;
+/* Home.scss */
+
+.home-page {
+  // ... (unchanged)
+
+  .apartment-box {
+    border-radius: 51%;
+    padding: 20px;
+    text-align: center;
+  }
 }
