update home screen and header
Header and Carousel

--- a/src/PartyRentingPlatform/ClientApp/src/app/modules/home/home.scss
+++ b/src/PartyRentingPlatform/ClientApp/src/app/modules/home/home.scss
@@ -6,6 +6,7 @@ Main page styles
 .home-page {
   background-color: #fafafa;
   margin-top: 50px;
+  z-index: 1;
 
   .apartment-box {
     border-radius: 51%;
