--- a/src/PartyRentingPlatform/ClientApp/src/app/app.scss
+++ b/src/PartyRentingPlatform/ClientApp/src/app/app.scss
@@ -313,3 +313,9 @@ http://stackoverflow.com/questions/23436430/bootstrap-3-input-group-100-width */
 }
 
 /* jhipster-needle-scss-add-main JHipster will add new css style */
+
+
+.ant-select-dropdown{
+  position: relative;
+  z-index: 10000;
+}
